before pusing feature-html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
   <head>
     <meta charset="utf-8">
-    <title>Client</title>
+    <title>Funfood.com</title>
     <meta name="description" lang="en" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" href="favicon.ico" />
@@ -14,10 +14,60 @@
     <div class="container">
       <!--header section start-->
       <header>
+        <div class="wrapper">
+          <!--coding for logo start here-->
+          <div class="logo">
+            <figure>
+              <img src="assets/Images/logo.png" alt="funfoods logo" title="Funfood logo">
+            </figure>
+          </div>
+          <!--coding for logo end here-->
+        </div>
       </header>
       <!--header section ends-->
       <!--main section start-->
       <main>
+        <section>
+          <div class="wrapper">
+              <figure class="table-img">
+                <img src="assets/Images/table.jpg" alt="table">
+              </figure>
+            <div class="first-screen">
+              <h2>boring</h2>
+              <h2>sandwich</h2>
+              <figure class="sad-sonali">
+                <img src="assets/Images/sad_sonali.png" alt="sad sonali">
+              </figure>
+              <figure class="plate">
+                <img src="assets/Images/plate.png" alt="food plate">
+              </figure>
+            </div>
+            <div class="second-screen">
+              <h2>ban gaya</h2>
+              <h2>sandwicheto!</h2>
+              <figure class="happy-sonali"><img src="assets/Images/happy_sonali.png" alt="happy sonali"></figure>
+              <figure class="sandwich1"><img src="assets/Images/sandwich_1.png" alt="sandwich bread"></figure>
+              <figure class="sandwich2"><img src="assets/Images/sandwich_2.png" alt="sandwich filling"></figure>
+              <figure class="sandwich3"><img src="assets/Images/sandwich_3.png" alt="sandwich upper bread"></figure>
+              <figure class="knife"><img src="assets/Images/knife.png" alt="knife"></figure>
+              <figure class="mayo"><img src="assets/Images/mayo.png" alt="mayo"></figure>
+            </div>
+            <div class="third-screen">
+              <h2>fun<span>foods</span></h2>
+              <h2>veg mayo ke saath</h2>
+              <figure class="chef">
+                <img src="assets/Images/chef.png" alt="chef">
+              </figure>
+            </div>
+            <div class="fourth-scrren">
+              <h2>food mein</h2>
+              <h2>daalo magic</h2>
+              <div class="get-recipe"><a href="#FIXME" target="_blank" title="Get recipe">get recipe</a></div>
+              <figure class="chef-hat"><img src="assets/Images/hat.png" alt="chef hat"></figure>
+              <figure class="mayo-bottel"><img src="assets/Images/veg_mayo.png" alt="mayo bottel"></figure>
+            </div>
+          </div>
+        </section>
       </main>
       <!--main section end-->
       <!--footer section start-->
