inbetween editing second animation

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
             </figure>
           </div>
           <div class="second-screen">
-            <h2>ban gaya</h2>
-            <h2>sandwicheto!</h2>
+            <div class="ss-headings">
+              <h2>ban gaya</h2>
+              <h2>sandwicheto!</h2>
+            </div>
             <figure class="happy-sonali"><img src="assets/Images/happy_sonali.png" alt="happy sonali"></figure>
             <figure class="sandwich1"><img src="assets/Images/sandwich_1.png" alt="sandwich bread"></figure>
             <figure class="sandwich2"><img src="assets/Images/sandwich_2.png" alt="sandwich filling"></figure>
