--- a/index.html
+++ b/index.html
@@ -31,7 +31,55 @@
     <main>
       <section>
         <div class="wrapper">
-          <figure class="table-img">
+          <div class="animation-main">
+            <figure class="slide-animation table-img">
+              <img src="assets/Images/table.jpg" alt="table">
+            </figure>
+            <h2 class="slide-animation bs-heading">boring<span class="heading-break">sandwich</span></h2>
+            <figure class="slide-animation sad-sonali">
+              <img src="assets/Images/sad_sonali.png" alt="sad sonali">
+            </figure>
+            <figure class="slide-animation plate">
+              <img src="assets/Images/plate.png" alt="food plate">
+            </figure>
+            <h2 class="slide-animation bgs-headings">ban gaya<span class="heading-break">sandwicheto!</span></h2>
+            <figure class="slide-animation happy-sonali">
+              <img src="assets/Images/happy_sonali.png" alt="happy sonali">
+            </figure>
+            <figure class="slide-animation sandwich-lb">
+              <img src="assets/Images/sandwich_1.png" alt="sandwich lower bread">
+            </figure>
+            <figure class="slide-animation sandwich-f">
+              <img src="assets/Images/sandwich_2.png" alt="sandwich filling">
+            </figure>
+            <figure class="slide-animation sandwich-up">
+              <img src="assets/Images/sandwich_3.png" alt="sandwich upper bread">
+            </figure>
+            <figure class="slide-animation knife">
+              <img src="assets/Images/knife.png" alt="knife">
+            </figure>
+            <figure class="slide-animation mayo-layer">
+              <img src="assets/Images/mayo.png" alt="mayo-layer">
+            </figure>
+            <h2 class="slide-animation ffms-heading">fun foods<span class="heading-break">veg mayo ke saath</span></h2>
+            <figure class="slide-animation chef">
+              <img src="assets/Images/chef.png" alt="chef">
+            </figure>
+            <h2 class="slide-animation fmdm-headings">food mein<span class="heading-break">daalo magic</span></h2>
+            <div class="slide-animation get-recipe">
+              <a href="#FIXME" target="_blank" title="Get recipe">get recipe</a>
+            </div>
+            <figure class="slide-animation chef-hat">
+              <img src="assets/Images/hat.png" alt="chef hat">
+            </figure>
+            <figure class="slide-animation mayo-bottel">
+              <img src="assets/Images/veg_mayo.png" alt="mayo bottel">
+            </figure>
+          </div>
+
+
+
+          <!-- <figure class="table-img">
             <img src="assets/Images/table.jpg" alt="table">
           </figure>
           <div class="first-screen">
@@ -71,7 +119,8 @@
             <div class="get-recipe"><a href="#FIXME" target="_blank" title="Get recipe">get recipe</a></div>
             <figure class="chef-hat"><img src="assets/Images/hat.png" alt="chef hat"></figure>
             <figure class="mayo-bottel"><img src="assets/Images/veg_mayo.png" alt="mayo bottel"></figure>
-          </div>
+          </div> -->
+
         </div>
       </section>
     </main>
